--- a/src/main/resources/static/partial/home.html
+++ b/src/main/resources/static/partial/home.html
@@ -1,3 +1,4 @@
+<h1>The next intermodal application</h1>
 <div ng-show="!authenticated">
     <a href="#/login">login</a>
     <p>Login to see the next intermodal application</p>
