#login url 로 접근

--- a/src/main/resources/static/partial/home.html
+++ b/src/main/resources/static/partial/home.html
@@ -21,5 +21,5 @@
     <label data-nxt-message></label>
     <button data-kendo-button ng-click="controller.progrma.push(newItem)">push!</button>
     <program-page></program-page>
-    <a prgm-Ref href="partial/d">foo</a>
+    <a n-href>foo</a>
 </div>
