--- a/src/main/resources/static/partial/home.html
+++ b/src/main/resources/static/partial/home.html
@@ -15,11 +15,11 @@
     </div>
     <span class="sideNavBtn" data-ng-click="controller.openNav()">&#9776;</span>
     <div data-kendo-button data-ng-click="controller.logout()">logout</div>
-    <div data-nxt-message></div>
+    <!-- <div data-nxt-message></div>
     <input data-nxt-message></input>
     <div data-kendo-button data-nxt-message></div>
     <label data-nxt-message></label>
     <button data-kendo-button ng-click="controller.progrma.push(newItem)">push!</button>
     <program-page></program-page>
-    <a n-href>foo</a>
+    <a n-href>foo</a> -->
 </div>
