--- a/src/main/resources/static/partial/app/user.html
+++ b/src/main/resources/static/partial/app/user.html
@@ -1,5 +1,29 @@
-user
+<script type="text/javascript">
+/* (function(){
+    'use strict';
+    function ProgramController($scope, $injector){
+        console.log("module controller");
+        console.log(this);
+        var vm = this;
+        vm.number = 3588500;
+        vm.text = "module user test";
+    }
+    
+    ProgramController.injector = ["$scope", "$injector"];
+    angular.module("programModule")
+    .controller("ProgramController", ProgramController);
+    //angular.bootstrap(angular.element("#program"), ["programModule"]);
 
-<p>{{vm.id}}</p>
-<input type="text" data-ng-model="vm.id"></input>
-<p>{{number}}</p>
+})(); */
+</script>
+
+user
+<div id="program" dynamic-controller="ProgramController as vm">
+    <p>{{program.id}}</p>
+    <input type="text" data-ng-model="program.id"></input>
+    <input type="text" data-ng-model="vm.text"></input>
+    <p>{{vm.number}}</p>
+    <p>{{vm.text}}</p>
+    <p>{{vm.number | currency}}</p>
+
+</div>
