--- a/src/main/resources/static/partial/app/user.html
+++ b/src/main/resources/static/partial/app/user.html
@@ -18,7 +18,7 @@
 </script>
 
 user
-<div id="program" dynamic-controller="ProgramController as vm">
+<div id="program" >
     <p>{{program.id}}</p>
     <input type="text" data-ng-model="program.id"></input>
     <input type="text" data-ng-model="vm.text"></input>
