--- a/src/main/resources/static/partial/login.html
+++ b/src/main/resources/static/partial/login.html
@@ -11,4 +11,9 @@ There was a problem logging in. Please try again.
             name="password" ng-model="controller.credentials.password" />
     </div>
     <kendo-button type="submit" class="btn btn-primary">Login</kendo-button>
+    <label for="icon-left">Input with icon on the left</label>
+    <span class="k-textbox k-space-left" style="width: 100%;" >
+        <input type="text" id="icon-left" />
+        <a href="#" class="k-icon k-i-search">&nbsp;</a>
+    </span>
 </form>
