--- a/src/main/resources/static/partial/app/resource.html
+++ b/src/main/resources/static/partial/app/resource.html
@@ -1,27 +1,24 @@
-<div id="program">
-    <script type="text/javascript">
-    var $scope = angular.element("#program").scope();
-    var $injector = angular.element("#program").injector().get("$injector");
-    var $state = angular.element("#program").injector().get("$state");
-    var vm2 = angular.element("[ui-view]").data("$uiView").state;
-    console.log(angular.element("#program"));
-    console.log($scope);
-    var controller = vm2.self.controller[vm2.self.controller.length-1].prototype;
-    console.log(controller.vm);
-    console.log(vm2);
-    console.log(controller);
-    var dd = $injector.get("$controller"); //("vm", {$scope: $scope});
-    console.log(dd);
-    $scope.number = 123456;
-    $scope.text = "test"
-
+<script type="text/javascript">
+(function(){
+    'use strict';
+    function ProgramController($scope, $injector){
+        console.log("module controller");
+        console.log(this);
+        var vm = this;
+        vm.number = 3588500;
+        vm.text = "module user test";
+    }
     
-    console.log($state);
-    </script>
+    ProgramController.injector = ["$scope", "$injector"];
+    angular.module("programModule")
+    .controller("ProgramController", ProgramController);
+})();
+</script>
+<div id="program" dynamic-controller="ProgramController as vm">
     <div class="content">
         <p>resource</p>
         <p>{{vm.id}}</p>
-        <p>{{number | currency }}</p>
-        <span>{{text}}</span>
+        <p>{{vm.number | currency }}</p>
+        <span>{{vm.text}}</span>
     </div>
 </div>
