--- a/src/main/resources/static/partial/app/user.html
+++ b/src/main/resources/static/partial/app/user.html
@@ -2,8 +2,6 @@
 (function(){
     'use strict';
     function ProgramController($scope, $injector){
-        console.log("module controller");
-        console.log(this);
         var vm = this;
         vm.number = 3588500;
         vm.text = "module user test";
@@ -14,11 +12,9 @@
     .controller("ProgramController", ProgramController);
 })();
 </script>
-
-user
-<div id="program" dynamic-controller="ProgramController as vm">
+<div id="program" data-dynamic-controller="ProgramController as vm">
     <p>{{program.id}}</p>
-    <input type="text" data-ng-model="program.id"></input>
+    <input type="text" class="k-textbox" data-ng-model="program.id"></input>
     <input type="text" data-ng-model="vm.text"></input>
     <p>{{vm.number}}</p>
     <p>{{vm.text}}</p>
