[추가]angularjs tranlate, message서비스

--- a/src/main/resources/static/partial/login.html
+++ b/src/main/resources/static/partial/login.html
@@ -75,7 +75,7 @@
                     <div class="ipbox_c">
                         <ul>
                             <li>
-                                <h3>Container Tracking</h3>
+                                <h3>Container Tracking{{'LAB.SAVE' | translate}}</h3>
                             </li>
                             <li class="sh">
                                 <input name="name" type="text" placeholder="Quick Search" class="ip2" value="" title="" ng-model="controller.tracker" />
