프로그램 화면 상단 path추가

--- a/src/main/resources/static/css/nxtims.css
+++ b/src/main/resources/static/css/nxtims.css
@@ -9,3 +9,5 @@
 [ng\:cloak], [ng-cloak], .ng-cloak {
     display: none !important;
 }
+
+#allmenu_box .all_cont .k-treeview {color:#fff; font-size:16px;}
