--- a/src/main/resources/static/partial/common/navigation.html
+++ b/src/main/resources/static/partial/common/navigation.html
@@ -11,7 +11,10 @@
             <li><a href="#" ng-click="nav.logout()"><img src="img/common/btn_topmenu2.gif" alt="logout"></a></li>
         </ul>
     </div>
-    <div class="allmenu"><a href="javascript:void(0)" class="btn_all" ng-click="menu.all()"><img src="img/common/btn_allmenu.gif" class="btn_all" alt="전체메뉴"> Project</a></div>
+    <div class="allmenu">
+        <a href="javascript:void(0)" class="btn_all" ng-click="menu.all()"><img src="img/common/btn_allmenu.gif"
+            class="btn_all" alt="전체메뉴"> Program</a>
+    </div>
 </div>
-<div program-menu ng-cloak></div>
+<div program-menu></div>
 
