--- a/src/main/resources/static/partial/common/navigation.html
+++ b/src/main/resources/static/partial/common/navigation.html
@@ -13,7 +13,7 @@
     </div>
     <div class="allmenu">
         <a href="javascript:void(0)" class="btn_all" ng-click="menu.all()"><img src="img/common/btn_allmenu.gif"
-            class="btn_all" alt="전체메뉴"> Program</a>
+            class="btn_all" alt="전체메뉴"> Project</a>
     </div>
 </div>
 <div program-menu></div>
